feat: simplified logic a bit
